tests/baselines/reference/restElementWithBindingPattern2.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithBindingPattern2.ts(1,16): error TS2459: Type 'number[]' has no property 'b' and no string index signature.


==== tests/cases/conformance/es6/destructuring/restElementWithBindingPattern2.ts (1 errors) ====
    var [...{0: a, b }] = [0, 1];
                   ~
!!! error TS2459: Type 'number[]' has no property 'b' and no string index signature.